--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -8,6 +8,7 @@
     display: flex;
     flex-direction: column;
     height: 100vh;
+    background-image: url('../images/wall.png');
 
 }
 
@@ -20,6 +21,7 @@
     width: 100%;
     background-color: #000000;
     color: #FFFFFF;
+    border-bottom: 5px solid #ffd700;
 }
 
 .panel {
@@ -27,16 +29,26 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    border: 1px solid #FF0000;
 }
 
 .square {
     height: 150px;
     width: 150px;
     border: 1px solid #000000;
-    background-color: #7fffd4;
+    background-color: #1AEAA5;
 }
 
 .enemy {
-    
+    background-image: url('../images/ralph.png');
+    background-size: cover;
+}
+
+.menu-lives {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.menu-time h2:nth-child(2),
+.menu-score h2:nth-child(2) {
+    margin-top: 1rem;
 }
